unpackaged/main/default/objects/ETI_Reschedule_Cancel_Charges__mdt/ETI_Reschedule_Cancel_Charges__mdt.object-meta.xml
<CustomObject>
    <label>ETI Reschedule&amp;Cancel Charges</label>
    <pluralLabel>ETI Reschedule&amp;Cancel Charges</pluralLabel>
</CustomObject>