unpackaged/main/default/objects/ETI_Reschedule_Cancel_Charges__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>