unpackaged/main/default/objects/ETI_Reschedule_Cancel_Charges__mdt/fields/Max_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Time_Limit__c</fullName>
    <label>Max Time Limit</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>