unpackaged/main/default/objects/ETI_Reschedule_Cancel_Charges__mdt/fields/Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Refund_Percentage__c</fullName>
    <label>Refund Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>