unpackaged/main/default/objects/ETI_Reschedule_Cancel_Charges__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Type__c</columns>
    <columns>Max_Time_Limit__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>Refund_Percentage__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>